# komle

./: .gitignore  Makefile  README.md  generate.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml
examples/: hello_witsml.py  hello_witsml2.py  hello_witsml_writer.py  hello_writer.py  requirements.txt
komle/: WMLS.WSDL  soap_client.py  uom_converter.py  utils.py  witsmlUnitDict.xml
komle/bindings/: uom.py
komle/bindings/v1411/api/: cap_client.py  cap_server.py
komle/bindings/v1411/read/: _abs.py  _gco.py  _gmd.py  _gml.py  _gsr.py  _gss.py  _gts.py  _xlink.py
komle/bindings/v1411/write/: _abs.py  _gco.py  _gmd.py  _gml.py  _gsr.py  _gss.py  _gts.py  _xlink.py
komle/bindings/v20/: _eml.py  _gco.py  _gmd.py  _gml.py  _gsr.py  _gts.py  _nsgroup.py  _xlink.py
komle/read_bindings/: _abs.py  _gts.py  _xlink.py
komle/write_bindings/: _abs.py  _gco.py  _gsr.py  _xlink.py
public/: cs_contact.xsd  cs_function.xsd  obj_capClient.xsd  obj_capServer.xsd  typ_dataTypes.xsd
tests/: test_bindings_v2.py  test_bindings_v20.py  test_new_bindings.py  test_read_bindings.py  test_uom_convertor.py  test_utils.py  test_write_bindings.py
tests/samples/: BhaRun.xml  Log.xml  MudLogReport.xml  Trajectory.xml  Tubular.xml  Well.xml  Wellbore.xml  message.xml  mudLog.xml  risk.xml  small_depth_log.xml  trajectory.xml  wellbore.xml
