[tool.poetry]
name = "komle-plus"
version = "0.3.2.3"
description = "A python library to help with WITSML v1.4.1.1 and v2.0"
authors = ["Hemerson Rafael <rafaelpontes1995@gmail.com>"]
packages = [
    { include = "komle" },
]

[tool.poetry.dependencies]
python = "^3.10"
suds-py3 = "^1.4.5.0"
PyXB-X = "^1.2.6"
requests = "^2.31.0"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pytest = "^7.0.1"
pip-audit = "^2.0.0"
darker = "^1.4.1"
setuptools = "^60.9.3"
wheel = "^0.37.1"
twine = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
